# gwaihir

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: main.rs
src/statistics/: averages.rs  base.rs  mod.rs  robust.rs
